--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -31,14 +31,9 @@
               <span class="text-gray-700 group-hover:text-blue-600 group-hover:font-semibold">Address</span>
             </a>
           </li>
+          
           <li>
-            <a href="#" class="flex items-center p-4 rounded-lg group transition-all duration-300 hover:bg-blue-50 hover:shadow-md">
-              <i class="fas fa-credit-card text-blue-500 mr-4 group-hover:scale-110 group-hover:rotate-6"></i>
-              <span class="text-gray-700 group-hover:text-blue-600 group-hover:font-semibold">Payment</span>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="flex items-center p-4 rounded-lg group transition-all duration-300 hover:bg-blue-50 hover:shadow-md">
+            <a href="/wallet" class="flex items-center p-4 rounded-lg group transition-all duration-300 hover:bg-blue-50 hover:shadow-md">
               <i class="fas fa-wallet text-blue-500 mr-4 group-hover:scale-110 group-hover:rotate-6"></i>
               <span class="text-gray-700 group-hover:text-blue-600 group-hover:font-semibold">Wallet</span>
             </a>
@@ -104,8 +99,7 @@
         </div>
       </div>
     </div>
-  </div>
-</div>
+  
 
 <%- include("../partials/footer.ejs") %>
 
